--- a/index1.html
+++ b/index1.html
@@ -68,14 +68,22 @@
                   <a-assets>
                     <canvas id="myCanvas"></canvas>
                 </a-assets>
-                <a-curvedimage src="#remote-video" height="3.927" radius="5" theta-length="90" theta-start="135"></a-curvedimage>
-                <a-curvedimage
+                <a-curvedimage 
+                src="#remote-video"
+                 height="3.927"
+                  radius="15"
+                  position="0 1.5 0"
+                  rotation="10 0 0"
+                   theta-length="90"
+                    theta-start="135"
+                    ></a-curvedimage>
+                <!-- <a-curvedimage
                     src="#remote-video"
                     radius="2"
                     theta-length="30"
                     rotation="0 160 0"
                     >        
-                </a-curvedimage>
+                </a-curvedimage> -->
 
                  <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-box>
             <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
