--- a/index1.html
+++ b/index1.html
@@ -101,10 +101,16 @@
             <!-- <a-entity geometry="primitive: sphere; thetaLength: 180; radius: 5000; segmentsWidth: 64; segmentsHeight: 20" scale="1 1 -1" material="src: #myVideo; shader: flat"></a-entity> -->
             <!-- <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9" shadow csg-meshs="subtract: #sphere"></a-box> -->
             <!-- <a-videosphere src="#remote-video" webkit-playsinline></a-videosphere> -->
-            <a-curvedimage zoom-controls src="#remote-video" position="0 0 0" rotation="60 0 0" height="64.125"
+            <!-- <a-curvedimage zoom-controls src="#remote-video" position="0 0 0" rotation="60 0 0" height="64.125"
                 radius="58" theta-length="112.6159" theta-start="123.6921"></a-curvedimage>
             <a-curvedimage src="#remote-video" position="0 0 0" rotation="0 0 0" height="64.125" radius="58"
-                theta-length="112.6159" theta-start="123.6921"></a-curvedimage>
+                theta-length="112.6159" theta-start="123.6921"></a-curvedimage> -->
+
+                <a-curvedimage position="0 2.75 3.2" src="#remote-video" height="1.027" radius="5" theta-length="25=0" theta-start="165"></a-curvedimage>
+                <a-curvedimage position="0 1.7 3.2" src="#remote-video" height="1.027" radius="5" theta-length="25=0" theta-start="165"></a-curvedimage>
+                <a-curvedimage position="2 1.7 3.2" src="#remote-video" height="1.027" radius="5" theta-length="25=0" theta-start="165"></a-curvedimage>
+                <a-curvedimage position="-2 1.7 3.2" rotation="0 0 0" src="#remote-video" height="1.027" radius="5" theta-length="25=0" theta-start="165"></a-curvedimage>
+                <a-curvedimage position="0 0.65 3.2" src="#remote-video" height="1.027" radius="5" theta-length="25=0" theta-start="165"></a-curvedimage>
             <!-- <a-curvedimage src="#remote-video" position="0 40 0" rotation="40 0 0"  height="64.125" radius="58" theta-length="112.6159" theta-start="123.6921"></a-curvedimage> -->
             <!-- <a-curvedimage src="#remote-video" height="38.0625" radius="58" theta-length="112.6159" theta-start="123.6921"></a-curvedimage> -->
             <!-- <a-curvedimage position="0 2 0" src="image1.png" height="3.927" radius="4" theta-length="90" theta-start="90"></a-curvedimage> -->
@@ -160,8 +166,8 @@
 </a-entity> -->
 
 
-            <a-box src="image1.png" scale="2 2 2" position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"
-                scale="1.5 1 1"></a-box>
+            <!-- <a-box src="image1.png" scale="2 2 2" position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"
+                scale="1.5 1 1"></a-box> -->
             <!-- <a-cylinder position="1 0.75 -3" radius="1" segment height="1.5" color="#FFC65D"></a-cylinder> -->
             <!-- <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder> -->
             <a-plane src="image1.png" position="0 0 -4" rotation="-90 0 0" width="4" height="42" color="#7BC8A4">
