Neko something WIP

--- a/index1.html
+++ b/index1.html
@@ -66,16 +66,16 @@
                     position="0.41 1.72 0" rotation=""></a-entity>
 
             </a-entity> -->
-            <a-curvedimage mousecontrol id="panandzoom" position="0 2.75 3.2" src="#remote-video" height="1.027"
-            radius="5" theta-length="25=0" theta-start="165"></a-curvedimage>
+            <!-- <a-curvedimage mousecontrol id="panandzoom" position="0 2.75 3.2" src="#remote-video" height="1.027"
+            radius="5" theta-length="25=0" theta-start="165"></a-curvedimage> -->
         <a-curvedimage position="0 1.7 3.2" src="#remote-video" height="1.027" radius="5"
             theta-length="25=0" theta-start="165"></a-curvedimage>
-        <a-curvedimage position="2 1.7 3.2" src="#remote-video" height="1.027" radius="5"
+        <!-- <a-curvedimage position="2 1.7 3.2" src="#remote-video" height="1.027" radius="5"
             theta-length="25=0" theta-start="165"></a-curvedimage>
-        <a-curvedimage position="-2 1.7 3.2" rotation="0 0 0" src="#remote-video" height="1.027" radius="5"
+        <a-curvedimage position="-2.5 1.7 3.2" rotation="0 0 0" src="#remote-video" height="1.027" radius="5"
             theta-length="25=0" theta-start="165"></a-curvedimage>
         <a-curvedimage position="0 0.65 3.2" src="#remote-video" height="1.027" radius="5"
-            theta-length="25=0" theta-start="165"></a-curvedimage>
+            theta-length="25=0" theta-start="165"></a-curvedimage> -->
 
 
             <!-- <a-box src="image1.png" scale="2 2 2" position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"
