Committing from inside mobile VR, yaygit add .

--- a/index1.html
+++ b/index1.html
@@ -68,7 +68,11 @@
             </a-entity> -->
             <!-- <a-curvedimage mousecontrol id="panandzoom" position="0 2.75 3.2" src="#remote-video" height="1.027"
             radius="5" theta-length="25=0" theta-start="165"></a-curvedimage> -->
+            <a-curvedimage position="0 0.68 3.2" rotation="23 0 0 " src="#remote-video" height="1.027" radius="5"
+            theta-length="25=0" theta-start="165"></a-curvedimage>
         <a-curvedimage position="0 1.7 3.2" src="#remote-video" height="1.027" radius="5"
+            theta-length="25=0" theta-start="165"></a-curvedimage>
+            <a-curvedimage position="0 2.7 3.2" rotation="-23 0 0 " src="#remote-video" height="1.027" radius="5"
             theta-length="25=0" theta-start="165"></a-curvedimage>
         <!-- <a-curvedimage position="2 1.7 3.2" src="#remote-video" height="1.027" radius="5"
             theta-length="25=0" theta-start="165"></a-curvedimage>
