2 screens at a time

--- a/index1.html
+++ b/index1.html
@@ -27,6 +27,7 @@
     <div class="meet-area">
         <!-- Remote Video Element-->
         <video id="remote-video" style="display: none;"></video>
+        <video id="remote-video-2" style="display: none;"></video>
 
         <!-- Local Video Element-->
         <video id="local-video" style="display: none;"></video>
@@ -70,7 +71,7 @@
             radius="5" theta-length="25=0" theta-start="165"></a-curvedimage> -->
             <a-curvedimage position="0 0.68 3.2" rotation="23 0 0 " src="#remote-video" height="1.027" radius="5"
             theta-length="25=0" theta-start="165"></a-curvedimage>
-        <a-curvedimage position="0 1.7 3.2" src="#remote-video" height="1.027" radius="5"
+        <a-curvedimage position="0 1.7 3.2" src="#remote-video-2" height="1.027" radius="5"
             theta-length="25=0" theta-start="165"></a-curvedimage>
             <a-curvedimage position="0 2.7 3.2" rotation="-23 0 0 " src="#remote-video" height="1.027" radius="5"
             theta-length="25=0" theta-start="165"></a-curvedimage>
