improved upper and lower screen orientation

--- a/index1.html
+++ b/index1.html
@@ -69,12 +69,16 @@
             </a-entity> -->
             <!-- <a-curvedimage mousecontrol id="panandzoom" position="0 2.75 3.2" src="#remote-video" height="1.027"
             radius="5" theta-length="25=0" theta-start="165"></a-curvedimage> -->
-            <a-curvedimage position="0 0.68 3.2" rotation="23 0 0 " src="#remote-video" height="1.027" radius="5"
-            theta-length="25=0" theta-start="165"></a-curvedimage>
+            
+            <a-curvedimage position="0 -0.93 2.16" rotation="45.78 0 0" src="#remote-video" height="1.027" radius="5" theta-length="25=0" theta-start="165" material="" geometry="thetaLength: 25; thetaStart: 165"></a-curvedimage>
+            <!-- <a-curvedimage position="0 0.68 3.2" rotation="23 0 0 " src="#remote-video" height="1.027" radius="5"
+            theta-length="25=0" theta-start="165"></a-curvedimage> -->
         <a-curvedimage position="0 1.7 3.2" src="#remote-video-2" height="1.027" radius="5"
             theta-length="25=0" theta-start="165"></a-curvedimage>
-            <a-curvedimage position="0 2.7 3.2" rotation="-23 0 0 " src="#remote-video" height="1.027" radius="5"
-            theta-length="25=0" theta-start="165"></a-curvedimage>
+
+            <a-curvedimage position="0 4.69 1.76" rotation="-51.43 0 0" src="#remote-video" height="1.027" radius="5" theta-length="25=0" theta-start="165" material="" geometry="thetaLength: 25; thetaStart: 165"></a-curvedimage>
+            <!-- <a-curvedimage position="0 2.7 3.2" rotation="-23 0 0 " src="#remote-video" height="1.027" radius="5"
+            theta-length="25=0" theta-start="165"></a-curvedimage> -->
         <!-- <a-curvedimage position="2 1.7 3.2" src="#remote-video" height="1.027" radius="5"
             theta-length="25=0" theta-start="165"></a-curvedimage>
         <a-curvedimage position="-2.5 1.7 3.2" rotation="0 0 0" src="#remote-video" height="1.027" radius="5"
