Slowed down zooming acceleration

--- a/index1.html
+++ b/index1.html
@@ -39,7 +39,7 @@
         <a-scene inspector="https://cdn.jsdelivr.net/gh/aframevr/aframe-inspector@master/dist/aframe-inspector.min.js">
             <a-entity id="rig" position="0 4 0">
 
-                <a-camera id="cam" look-controls>
+                <a-camera id="cam" look-controls wasd-controls="acceleration:10">
                     <a-cursor color="orange" fuse="true" fuseduration="1500" />
 
                 </a-camera>
