--- a/index1.html
+++ b/index1.html
@@ -64,9 +64,14 @@
                 theta-start="190" material="" geometry="thetaLength: 25; thetaStart: 190" rotation="0.08 45 0">
             </a-curvedimage>
 
-            <a-plane src="image1.png" position="0 0 -4" rotation="-90 0 0" width="4" height="42" color="#7BC8A4">
+            <!-- back screen -->
+            <a-curvedimage position="-12.22 1.42 -119.13" src="#remote-video-2" height="1.027" radius="5" theta-length="25=0" theta-start="190" material="height: 268.04" geometry="radius: 5.05; thetaLength: 30.83; thetaStart: 297.34" rotation="-1.76 50.98 0" scale="30.77 28.63 30.18">
+            </a-curvedimage>
+
+            <a-plane src="mattblack.jpeg" position="0 0 -4" rotation="-90 0 0" width="4" height="42" color="#7BC8A4">
             </a-plane>
-            <a-sky color="#ECECEC"></a-sky>
+            
+            <a-sky src="milky.jpeg"></a-sky>
         </a-scene>
     </p>
 </body>
