--- a/index1.html
+++ b/index1.html
@@ -10,6 +10,41 @@
     <!-- <script src="https://unpkg.com/aframe-supercraft-loader@1.1.3/dist/aframe-supercraft-loader.js"></script> -->
     </a-scene>
     <meta name="apple-mobile-web-app-capable" />
+    <script>
+        AFRAME.registerComponent('cursor-listener', {
+            init: function () {
+                var lastIndex = -1;
+                var COLORS = ['red', 'green', 'blue'];
+                this.el.addEventListener('click', function (evt) {
+                    console.log('I was clicked at: ', evt.detail.intersection.point);
+                    let intersectionPoint = evt.detail.intersection.point;
+                    var rig = document.querySelector("#rig");
+
+                    try {
+                        // console.log(event)
+
+                        // let x = event.deltaX;
+                        // let y = event.deltaY;
+
+                        // let currentX = rig.getAttribute("position").x;
+                        // let currentY = rig.getAttribute("position").z;
+                        // console.log(`${x * 0.1} ${y * 0.1} 0`)
+                        // console.log("position", `${x * 0.01 + currentX} ${y * 0.01 + currentY} 0`)
+
+                        rig.setAttribute("position", "0.5 0 0")
+                        rig.setAttribute("rotation", `0 -38.39 10`)
+
+             
+                    }
+                    catch (e) {
+                        alert(e);
+                    }
+
+                });
+            }
+        });
+
+    </script>
 
 </head>
 
@@ -37,8 +72,10 @@
     </div>
     <p>
         <a-scene inspector="https://cdn.jsdelivr.net/gh/aframevr/aframe-inspector@master/dist/aframe-inspector.min.js">
-            <a-entity id="rig" position="0 4 0">
-
+            <a-entity id="rig" position="0 4 0" rotation="0 0 0">
+                <!-- <a-entity id="rig" position="-0.57 0.04 0.29" rotation="-5.44 -78.39 2.47"> -->
+                <!-- looking at right screen -->
+                <!-- position="-0.57 0.04 0.29" rotation="-5.44 -78.39 2.47" -->
                 <a-camera id="cam" look-controls wasd-controls="acceleration:10">
                     <a-cursor color="orange" fuse="true" fuseduration="1500" />
 
@@ -52,8 +89,9 @@
             <a-curvedimage position="0 1.7 3.2" src="#remote-video-2" height="1.027" radius="5" theta-length="25=0"
                 theta-start="165"></a-curvedimage>
             <!-- Right screen -->
-            <a-curvedimage position="-3.6 1.67 0.89" src="#remote-video-2" height="1.027" radius="5" theta-length="25=0"
-                theta-start="140" material="" geometry="thetaLength: 25; thetaStart: 136.76" rotation="0.08 -47.39 0">
+            <a-curvedimage id="right-screen" cursor-listener position="-3.6 1.67 0.89" src="#remote-video-2" height="1.027" radius="5"
+                theta-length="25=0" theta-start="140" material="" geometry="thetaLength: 25; thetaStart: 136.76"
+                rotation="0.08 -47.39 0">
             </a-curvedimage>
             <!-- Lower screen -->
             <a-curvedimage position="0 4.69 1.76" rotation="-51.43 0 0" src="#remote-video" height="1.027" radius="5"
@@ -65,12 +103,15 @@
             </a-curvedimage>
 
             <!-- back screen -->
-            <a-curvedimage position="-12.22 1.42 -119.13" src="#remote-video-2" height="1.027" radius="5" theta-length="25=0" theta-start="190" material="height: 268.04" geometry="radius: 5.05; thetaLength: 30.83; thetaStart: 297.34" rotation="-1.76 50.98 0" scale="30.77 28.63 30.18">
+            <a-curvedimage position="-12.22 1.42 -119.13" src="#remote-video-2" height="1.027" radius="5"
+                theta-length="25=0" theta-start="190" material="height: 268.04"
+                geometry="radius: 5.05; thetaLength: 30.83; thetaStart: 297.34" rotation="-1.76 50.98 0"
+                scale="30.77 28.63 30.18">
             </a-curvedimage>
 
             <a-plane src="mattblack.jpeg" position="0 0 -4" rotation="-90 0 0" width="4" height="42" color="#7BC8A4">
             </a-plane>
-            
+
             <a-sky src="milky.jpeg"></a-sky>
         </a-scene>
     </p>
@@ -101,6 +142,9 @@
         }
 
     });
+
+
+
     // AFRAME.registerComponent('mousecontrol', {
     //     schema: {
     //         min: { type: "number", default: 5 },
