--- a/index1.html
+++ b/index1.html
@@ -61,8 +61,7 @@
     </div>
     <div class="meet-area">
         <!-- Remote Video Element-->
-        <video id="remote-video" style="display: none;"></video>
-        <video id="remote-video-2" style="display: none;"></video>
+        <video id="remote-video" autoplay loop="true"  ></video>
 
         <!-- Local Video Element-->
         <video id="local-video" style="display: none;"></video>
@@ -81,6 +80,14 @@
 
                 </a-camera>
             </a-entity>
+
+            <a-assets>
+                <!-- <video src="elly-intro.mp4" id="intro-video"></video> -->
+                <!-- <video id="remote-video" autoplay="true" muted  src="elly-intro.mp4" ></video> -->
+                <video id="remote-video-2"  src="elly-intro.mp4" ></video>
+
+            </a-assets>
+
             <!-- Upper screen -->
             <a-curvedimage position="0 -0.93 2.16" rotation="45.78 0 0" src="#remote-video" height="1.027" radius="5"
                 theta-length="25=0" theta-start="165" material="" geometry="thetaLength: 25; thetaStart: 165">
@@ -143,8 +150,15 @@
 
     });
 
-
-
+    let video1 = document.getElementById("remote-video");
+    video1.src = 'elly-intro-long.mp4';
+    video1.muted = true;
+    video1.play();
+    
+    let video2 = document.getElementById("remote-video-2");
+    video2.src = 'elly-intro-long.mp4';
+    video2.muted = true;
+    video2.play();
     // AFRAME.registerComponent('mousecontrol', {
     //     schema: {
     //         min: { type: "number", default: 5 },
