--- a/index1.html
+++ b/index1.html
@@ -80,7 +80,7 @@
 </head>
 
 <body>
-   
+
     <a-scene inspector="https://cdn.jsdelivr.net/gh/aframevr/aframe-inspector@master/dist/aframe-inspector.min.js">
         <a-entity id="rig" position="0 4 0" rotation="0 0 0">
             <!-- <a-entity id="rig" position="-0.57 0.04 0.29" rotation="-5.44 -78.39 2.47"> -->
@@ -104,7 +104,8 @@
             <video id="remote-video-3" autoplay loop="true"></video>
             <video id="remote-video-4" autoplay loop="true"></video>
             <video id="remote-video-5" autoplay loop="true"></video>
-    
+            <video id="remote-video-6"></video>
+
         </div>
 
         <!-- Upper screen -->
@@ -120,8 +121,13 @@
             radius="5" theta-length="25=0" theta-start="140" material="" geometry="thetaLength: 25; thetaStart: 136.76"
             rotation="0.08 -47.39 0">
         </a-curvedimage>
+
+        <!-- mobile camera -->
+        <a-curvedimage cursor-listener="" id="camera-screen" position="-0.9 4.79 1.7" rotation="-46.47 0 -7.68" src="#remote-video-6" height="1.027" radius="5" theta-length="25=0" theta-start="165" material="" geometry="height: 0.327; radius: 5.12; thetaLength: 9.5; thetaStart: 165">
+        </a-curvedimage>
+
         <!-- Lower screen -->
-        <a-curvedimage cursor-listener id="lower-screen" position="0 4.69 1.76" rotation="-51.43 0 0"
+        <a-curvedimage cursor-listener="" id="lower-screen" position="0 4.69 1.76" rotation="-54.88 0 0"
             src="#remote-video-4" height="1.027" radius="5" theta-length="25=0" theta-start="165" material=""
             geometry="thetaLength: 25; thetaStart: 165">
         </a-curvedimage>
@@ -148,6 +154,28 @@
 <script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"></script>
 <script src='https://unpkg.com/panzoom@9.4.0/dist/panzoom.min.js'></script>
 <script>
+
+
+
+    function startCamera() {
+        // var getUserMedia = navigator.getUserMedia || navigator.webkitGetUserMedia || navigator.mozGetUserMedia;
+        console.log('starting here too')
+        // navigator.getUserMedia({ video: true, audio: true }, function (stream) {
+            navigator.getUserMedia({ video: { facingMode: { exact: "environment" } }, audio: true }, function (stream) {
+            console.log('stream', stream);
+            let video6 = document.getElementById("remote-video-6");
+            video6.srcObject = stream;
+            video6.muted = true;
+            video6.play();
+        }, function (err) {
+            console.log('Failed to get local stream', err);
+        });
+    }
+    setTimeout(() => {
+        console.log('starting camera');
+        startCamera();
+    }, 5000)
+
 
     var rig = document.querySelector("#rig");
 
@@ -272,6 +300,11 @@
         })
         call.answer(null);
     });
+
+
+
+
+
 
 </script>
 
