--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <p id="notification" hidden></p>
     <p>
     <div class="screen-tab">
-        <p>Screen 1</p>
+        <p>Screen 1 (Down)</p>
         <div>
             <button onclick="shareScreen(0)">Screen share</button>
         </div>
@@ -18,7 +18,8 @@
     </p>
     <p>
     <div class="screen-tab">
-        <p>Screen 2</p>
+        <p>Screen 2 (Front)</p> 
+        I can code on these screens too.
         <div>
             <button onclick="shareScreen(1)">Screen share</button>
         </div>
@@ -26,7 +27,7 @@
     </p>
     <p>
     <div class="screen-tab">
-        <p>Screen 3</p>
+        <p>Screen 3 (Left)</p>
         <div>
             <button onclick="shareScreen(2)">Screen share</button>
         </div>
@@ -34,7 +35,7 @@
     </p>
     <p>
     <div class="screen-tab">
-        <p>Screen 4</p>
+        <p>Screen 4 (Up)</p>
         <div>
             <button onclick="shareScreen(3)">Screen share</button>
         </div>
@@ -42,7 +43,7 @@
     </p>
     <p>
     <div class="screen-tab">
-        <p>Screen 5</p>
+        <p>Screen 5 (Right)</p>
         <div>
             <button onclick="shareScreen(4)">Screen share</button>
         </div>
